@@ -16,7 +16,6 @@
  */
 package org.apache.solr.core;
 
-import static java.util.Collections.singletonMap;
 import static org.apache.solr.api.ApiBag.HANDLER_NAME;
 
 import java.io.IOException;
@@ -42,7 +41,6 @@ import org.apache.solr.api.JerseyResource;
 import org.apache.solr.common.SolrException;
 import org.apache.solr.common.util.StrUtils;
 import org.apache.solr.handler.RequestHandlerBase;
-import org.apache.solr.handler.api.V2ApiUtils;
 import org.apache.solr.handler.component.SearchComponent;
 import org.apache.solr.jersey.APIConfigProvider;
 import org.apache.solr.jersey.APIConfigProviderBinder;
@@ -95,7 +93,7 @@ public class PluginBag<T> implements AutoCloseable {
 
   /** Pass needThreadSafety=true if plugins can be added and removed concurrently with lookups. */
   public PluginBag(Class<T> klass, SolrCore core, boolean needThreadSafety) {
-    if (klass == SolrRequestHandler.class && V2ApiUtils.isEnabled()) {
+    if (klass == SolrRequestHandler.class) {
       this.loadV2ApisIfPresent = true;
       this.apiBag = new ApiBag(core != null);
       this.jaxrsResourceRegistry = new JaxrsResourceToHandlerMappings();
@@ -251,10 +249,10 @@ public class PluginBag<T> implements AutoCloseable {
           if (registerApi == null) registerApi = apiSupport.registerV2();
           if (disableV1 == null) disableV1 = !apiSupport.registerV1();
 
-          if (registerApi && V2ApiUtils.isEnabled()) {
+          if (registerApi) {
             Collection<Api> apis = apiSupport.getApis();
             if (apis != null) {
-              Map<String, String> nameSubstitutes = singletonMap(HANDLER_NAME, name);
+              Map<String, String> nameSubstitutes = Map.of(HANDLER_NAME, name);
               for (Api api : apis) {
                 apiBag.register(api, nameSubstitutes);
               }
@@ -415,8 +413,7 @@ public class PluginBag<T> implements AutoCloseable {
 
     public PluginHolder(T inst, SolrConfig.SolrPluginInfo info) {
       this.inst = inst;
-      pluginInfo =
-          new PluginInfo(info.tag, Collections.singletonMap("class", inst.getClass().getName()));
+      pluginInfo = new PluginInfo(info.tag, Map.of("class", inst.getClass().getName()));
     }
 
     public PluginHolder(PluginInfo info) {
