@@ -26,7 +26,6 @@ import java.nio.file.Files;
 import java.nio.file.Path;
 import java.util.ArrayList;
 import java.util.Collection;
-import java.util.Collections;
 import java.util.HashMap;
 import java.util.HashSet;
 import java.util.List;
@@ -274,7 +273,7 @@ public class DocumentCategorizerUpdateProcessorFactory extends UpdateRequestProc
           pe);
     }
     srcInclusions = new SelectorParams();
-    srcInclusions.fieldRegex = Collections.singletonList(this.pattern);
+    srcInclusions.fieldRegex = List.of(this.pattern);
   }
 
   /**
